--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,44 @@
 /*This file is for your custom css.  All yours*/
+.square {
+  float :left;
+  position:relative;
+  width:15%;
+  /*height: auto;*/
+  padding-bottom:10%;
+  margin:.5%;
+  background-color:#e3dede;
+  overflow:hidden;
+}
+.content{
+  position: absolute;
+  height:100%;
+  width:100%;
+  font-size: 10em;
+  color: #ff3399;
+  text-align: center;
+}
+
+body{
+  font-size: 10px;
+}
+
+.board{
+  padding-top: 20%
+}
+
+.jumbotron{
+  text-align: center;
+  background-color:#D8E6E7;
+  font-family: 'Indie Flower', cursive;
+  color:#6E7783;
+
+}
+h2{
+  font-family: 'Fjalla One', sans-serif;
+  color:#8283a7;
+}
+
+.jumbotron h1{
+  font-size: 70px;
+
+}
