--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@
   margin:.5%;
   background-color:#e3dede;
   overflow:hidden;
+  cursor:pointer;
+}
+
+.square:hover {
+    background-color: yellow;
 }
 .content{
   position: absolute;
@@ -21,6 +26,7 @@
 
 body{
   font-size: 10px;
+  background-color:#F8FAFF;
 }
 
 .board{
@@ -28,12 +34,12 @@ body{
 }
 
 .jumbotron{
-  text-align: center;
   background-color:#D8E6E7;
   font-family: 'Indie Flower', cursive;
-  color:#6E7783;
-
+  background-image: url("../img/bingo.png");
+  height:250px;
 }
+
 h2{
 font-family: 'Anton', sans-serif;  color:#8283a7;
 
@@ -45,4 +51,16 @@ font-family: 'Anton', sans-serif;  color:#8283a7;
 }
 .center{
   padding-left: 10%;
+}
+.header{
+  font-size: 30px;
+  font-family: 'Candal', sans-serif;
+  color:#2E294E;
+}
+.text-file{
+  font-size: 1.3em;
+}
+
+.select{
+  font-size: 1.3em;
 }
