--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
     background-color: yellow;
 }
 .content{
-  /*position: absolute;*/
+  position: absolute;
   height:100%;
   width:100%;
   font-size: 5em;
