--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,9 @@
   position: absolute;
   height:100%;
   width:100%;
-  font-size: 5em;
+  font-size: 10em;
   color: #ff3399;
   text-align: center;
-
 }
 
 body{
@@ -73,4 +72,16 @@ h1,
 
 #fileInput {
   margin: auto;
+}
+
+.table{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
 }
