--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,26 @@ h1,
 #fileInput {
   margin: auto;
 }
+
+.modal-dialog {
+  width: 75%;
+  height: 75%;
+  margin: 1 auto;
+  padding: 0;
+}
+
+.modal-content {
+  height: auto;
+  min-height: 75%;
+  border-radius: 5px;
+}
+
+.modal-body {
+  margin: 0;
+  background: yellow;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
