--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/*This file is for your custom css.  All yours*/
 .square {
   float :left;
   position:relative;
@@ -8,7 +7,7 @@
   background-color:#e3dede;
   overflow:hidden;
   cursor:pointer;
-  font-size:.5em;        
+  font-size:.5em;
 }
 
 .square:hover {
@@ -21,6 +20,7 @@
   font-size: 5em;
   color: #ff3399;
   text-align: center;
+
 }
 
 body{
@@ -29,7 +29,8 @@ body{
 }
 
 .board{
-  padding-top: 20%;
+  width: 90%;
+  margin-left: auto;
 }
 
 .jumbotron{
@@ -56,10 +57,41 @@ font-family: 'Anton', sans-serif;  color:#8283a7;
   font-family: 'Candal', sans-serif;
   color:#2E294E;
 }
-.text-file{
+
+.text-file,
+.select {
   font-size: 1.3em;
 }
 
-.select{
-  font-size: 1.3em;
+h1,
+.text-file,
+.select {
+  text-align: center;
+}
+
+#fileInput {
+  margin: auto;
+}
+
+.modal-dialog {
+  width: 75%;
+  height: 75%;
+  margin: 1 auto;
+  padding: 0;
+}
+
+.modal-content {
+  height: auto;
+  min-height: 75%;
+  border-radius: 5px;
+}
+
+.modal-body {
+  margin: 0;
+  background: yellow;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
 }
