--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 body{
-  background-image: url(../img/cartoon-man.png), url(../img/img1.jpg);
-  background-repeat: no-repeat, no-repeat;;
-  background-position: left, center;
-  background-attachment: fixed, fixed;
-  background-size: auto, cover;
+  background:
+    url(../img/cartoon-man.png) no-repeat left fixed / 30%,
+    url(../img/img1.jpg) no-repeat center fixed / cover;
 }
 
 .square {
@@ -47,8 +45,17 @@ font-family: 'Anton', sans-serif;  color:#8283a7;
 }
 
 .jumbotron h1{
-  font-size: 70px;
+  font-size: 7em;
+  font-family: 'Montserrat', sans-serif;
 
+}
+.jumbotron{
+    background-color: rgba(31, 223, 231, .2);
+    background: -webkit-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* Standard syntax */
+}
 }
 .center{
   padding-left: 10%;
@@ -70,8 +77,8 @@ h1,
   text-align: center;
 }
 
-#fileInput {
-  margin: auto;
+#file-input {
+  display: none;
 }
 
 .table{
