--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,13 @@ body{
   margin-left: 4em;
 }
 
+#new-game{
+  display:none;
+}
+.btn{
+  width: 130%;
+  margin-left:-10%;
+}
 .square {
   float :left;
   position:relative;
