--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
   background:
-    url(../img/cartoon-man.png) no-repeat -8em 30em,left fixed / 30%,
+    url(../img/cartoon-man.png) no-repeat -8em 40em,left fixed / 30%,
     url(../img/img1.jpg) no-repeat center fixed / cover;
 }
 
@@ -35,23 +35,30 @@ body{
   width:15%;
   padding-bottom:10%;
   margin:.5%;
-  background-color:#e3dede;
+  background-color:#d0f9fb;
+  border: solid #0c868d;
   overflow:hidden;
   cursor:pointer;
   font-size:.5em;
+  border-radius: 4em;
 }
 
 .square:hover {
-    background-color: yellow;
+  background-color: #ffffb3;
 }
 .content{
   position: absolute;
   height:100%;
   width:100%;
   font-size: 10em;
-  color: #ff3399;
+  color: #4d94ff;
   text-align: center;
 
+}
+.btn-success{
+  background-color:#8a1021;
+  border-color: white;
+  border-width: medium;
 }
 
 body{
@@ -60,7 +67,7 @@ body{
 }
 
 .board{
-  width: 90%;
+  width: 100%;
   margin-left: 40%;
   margin-top: 16em;
 }
