--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,21 @@ body{
   display: none;
 }
 
+.modal {
+  /*width: 60%;*/
+  display: block;
+    /*position: absolute;*/
+    left: 60%;
+    height: 88%;
+    width: 28%;
+    overflow-y:auto;
+    overflow-x:auto;
+    border-radius: 0px;
+    font-size: 2em;
+    color: blue;
+}
+
+
 .modal-dialog {
   width: 75%;
   height: 75%;
@@ -104,19 +119,20 @@ body{
   padding: 0;
 }
 
+
 .modal-content {
   height: auto;
   min-height: 75%;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .modal-body {
   margin: 0;
-  background: yellow;
+  /*background: yellow;*/
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-right: -50%;
+  /*margin-right: -50%;*/
   transform: translate(-50%, -50%)
 }
 
@@ -130,27 +146,4 @@ body{
     vertical-align:middle;
     height:100%;
     width:100%;
-}
-
-.modal-dialog {
-  width: 75%;
-  height: 75%;
-  margin: 1 auto;
-  padding: 0;
-}
-
-.modal-content {
-  height: auto;
-  min-height: 75%;
-  border-radius: 5px;
-}
-
-.modal-body {
-  margin: 0;
-  background: yellow;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
 }
