add background to winning squares on bingo

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,9 @@ body{
   border-color: white;
   border-width: medium;
 }
-
+.bingo-background{
+  background-color: black;
+}
 body{
   font-size: 10px;
   background-color:#F8FAFF;
