--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,8 @@ body{
 .jumbotron p,
  h2,
  .text-file,
- .select {
+ .select,
+ .lead {
   font-family: 'PT Sans', sans-serif;  color:#1f4e5f;
   font-weight: bold;
   text-align: center;
@@ -111,44 +112,6 @@ body{
 
 .center{
   padding-left: 10%;
-}
-
-.modal {
-  width: 60%;
-  display: block;
-    position: absolute;
-    left: 60%;
-    height: 88%;
-    width: 28%;
-    overflow-y:auto;
-    overflow-x:auto;
-    border-radius: 0px;
-    font-size: 2em;
-    color: blue;
-    z-index: -1;
-}
-
-.modal-dialog {
-  width: 75%;
-  height: 75%;
-  margin: 1 auto;
-  padding: 0;
-}
-
-.modal-content {
-  height: auto;
-  min-height: 75%;
-  border-radius: 10px;
-}
-
-.modal-body {
-  margin: 0;
-  /*background: yellow;*/
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  /*margin-right: -50%;*/
-  transform: translate(-50%, -50%)
 }
 
 .table {
