--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
+
+
 body{
   background:
-    url(../img/cartoon-man.png) no-repeat -8em 40em,left fixed / 30%,
+    url(../img/cartoon-man.png) no-repeat -8em 50em,left fixed / 30%,
     url(../img/img1.jpg) no-repeat center fixed / cover;
 }
 
 .speech {
   position: relative;
-  width: 30em;
-  height: 20em;
+  width: 30%;
+  height: 10%;
   text-align: center;
   line-height: 10em;
   background-color: #fff;
@@ -18,8 +20,9 @@ body{
   -webkit-box-shadow: .2em .2em .4em #888;
   -moz-box-shadow: .2em .2em .4em #888;
   box-shadow: .2em .2em .4em #888;
-  margin-top: 3em;
+  margin-top: .1em;
   margin-left: 4em;
+  margin-bottom: 1.5em;
 }
 
 #new-game{
@@ -53,7 +56,7 @@ body{
   position: absolute;
   height:100%;
   width:100%;
-  font-size: 10em;
+  font-size: 7em;
   color: #4d94ff;
   text-align: center;
 }
@@ -62,6 +65,8 @@ body{
   background-color:#8a1021;
   border-color: white;
   border-width: medium;
+  width: 8em;
+  margin-left: 11%;
 }
 
 .bingo-background{
@@ -75,8 +80,8 @@ body{
 
 .board{
   width: 100%;
-  margin-left: 40%;
-  margin-top: 16em;
+  margin-left: 20%;
+  margin-top: .3%;
 }
 
 .jumbotron h1,
@@ -97,15 +102,18 @@ body{
   font-size: 2em;
 }
 
-.jumbotron{
-    background-color: rgba(31, 223, 231, .2);
-    background: -webkit-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* Standard syntax */
+.jumbotron {
+  background-color: rgba(31, 223, 231, .2);
+  /*background-image: url("../img/bingo-bar.jpeg");*/
+  background-size: cover;
+  background-repeat: no-repeat;
+  background: -webkit-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0)); /* Standard syntax */
 }
 
-.center{
+.center {
   padding-left: 10%;
 }
 
