--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,12 @@ body{
   -moz-box-shadow: .2em .2em .4em #888;
   box-shadow: .2em .2em .4em #888;
   margin-top: .1em;
-  margin-left: 4em;
+  margin-left: -2.5em;
   margin-bottom: 1.5em;
 }
 
 #new-game{
   display:none;
-}
-
-.btn{
-  width: 130%;
-  margin-left:-10%;
 }
 
 .square {
@@ -70,7 +65,6 @@ body{
   border-color: white;
   border-width: medium;
   width: 8em;
-  margin-left: 11%;
 }
 
 .bingo-background{
@@ -137,4 +131,8 @@ body{
 
 .invisible-text {
   color: transparent;
+}
+
+.header {
+  margin: .2em;
 }
