--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,12 @@ body{
   background: linear-gradient(rgba(31, 223, 231, 1), rgba(31, 223, 231, 0));
 }
 
+#instructions {
+  max-width: 50%;
+  display: block;
+  margin: auto;
+}
+
 .speech {
   position: relative;
   width: 30%;
